--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -33,11 +33,11 @@
       </li>
     </ul>
   </nav> -->
-  <div >
+  <!-- <div >
     <span  class="btnmenu">
    <a (click)="desplegarM0()"><img [src]="closedIcon"></a>
   </span >
-  </div>
+  </div> -->
     
   <span></span>
 
