--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
     <a class="social" class='centrar'  href="https://github.com/albertcolomer" target="_blank">
       <img title="Git Hub" [src]="gitS" > <p>Git Hub</p>
     </a>
-    <a class="social2" class='centrar' href="https://github.com/albertcolomer" target="_blank">
+    <a class="social2" class='centrar' href="https://www.linkedin.com/in/alberto-c-32200a42/" target="_blank">
       <img [src]="linkedin"> <p> Linkedin</p>
     </a>
     <div class='centrar'>
