--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -44,7 +44,7 @@
   <a href="https://github.com/albertcolomer" target="_blank">
     <img class="social" title="Git" [src]="gitS" alt=""><br>
   </a>
-  <a title="Linkedin" href="https://github.com/albertcolomer" target="_blank">
+  <a title="Linkedin" href="https://www.linkedin.com/in/alberto-c-32200a42/" target="_blank">
     <img class="social2" [src]="linkedin" alt=""><br>
   </a>
 
