--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -10,10 +10,10 @@
     challenges from different perspectives.<br>
     Project management methodologies used Scrum&Agile.<br>
     <br><br>
-    Formal instruction:<br>
+    Formations:<br>
     First cycle of Environmental Sciences. UNED, 2014-2016 <br>
-    Programming in structured languages Loeches, 2020 <br>
-    Programming information systems. Loeches, 2020 <br>
+    Programming in structured languages. Aspasia, 2019 <br>
+    Programming information systems. Loeches, 2021 <br>
   </p>
 
 
