--- a/src/app/certificates/certificates.component.scss
+++ b/src/app/certificates/certificates.component.scss
@@ -1,7 +1,9 @@
 li{    
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    flex-direction: row;
+    margin: 30px 0px 60px;
 }
 
 .credly{
@@ -20,6 +22,7 @@ li{
   padding: 10px 20px 0px;
   box-shadow: rgba(0, 0, 0, 0.479) 5px 5px 8px;
   background: rgba(13, 14, 13, 0.685);
+  margin: 20px;
 }
 
 .lin:hover{
@@ -27,6 +30,16 @@ li{
    background: rgba(0, 99, 185, 0.205);
    border-radius: 50px;
    box-shadow: rgba(0, 0, 0, 0) 5px 5px 8px;
+}
+
+
+
+
+@media(max-width:830px){
+  li{
+    flex-direction: column;
+  }
+ 
 }
 
 /* .containerN{   
