--- a/src/app/certificates/certificates.component.scss
+++ b/src/app/certificates/certificates.component.scss
@@ -1,42 +1,38 @@
-li{    
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    margin: 30px 0px 60px;
-}
-
-.credly{
-    max-width: 100px;
-    padding: 0px 10px;    
-}
-
-.azure{
-  max-width: 150px;
+.certificates{    
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  margin: 30px 0px 60px;
+  img{
+    max-width: 150px;
     padding: 0px 10px;
+  }
 }
 
-.lin{
+.link{
   border: 7px solid;
   border-radius: 50px;
   padding: 10px 20px 0px;
   box-shadow: rgba(0, 0, 0, 0.479) 5px 5px 8px;
   background: rgba(13, 14, 13, 0.685);
   margin: 20px;
+  &:hover{
+    background: rgba(0, 99, 185, 0.205);    
+  }
+  img{
+    max-width: 100px;
+    padding: 0px 10px; 
+  }
 }
 
-.lin:hover{
-   border: 7px solid;
-   background: rgba(0, 99, 185, 0.205);
-   border-radius: 50px;
-   box-shadow: rgba(0, 0, 0, 0) 5px 5px 8px;
+.nameC{
+  max-width: 150px;
 }
-
-
 
 
 @media(max-width:830px){
-  li{
+  .certificates{
     flex-direction: column;
   }
  
