language correction and new style class

--- a/src/app/shared/project/project.component.html
+++ b/src/app/shared/project/project.component.html
@@ -4,7 +4,7 @@
     <figcaption>
       <h2 class="project__title"> <span>{{ project.title }}</span></h2>		
       <p><span>Technologies</span> </p>
-      <p>
+      <p class="project__skills">
         <img title='Html 5' [src]='project.skills'>
         <img title='Css 3' [src]="project.skill3">
         <img title='javascript' [src]="project.javascript">
