--- a/src/app/shared/project/project.component.scss
+++ b/src/app/shared/project/project.component.scss
@@ -13,6 +13,9 @@
     margin: 40px 0px 20px 0px;
     //text-decoration: underline;
   }
+  &__skills{
+    margin: 25px 0px 50px !important;
+  }
   &__link {
     background-color: rgba(255, 255, 255, 0);//var(--primary);
     border: 3px solid var(--white);
