--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -7,5 +7,5 @@
 <app-projects></app-projects>
 <app-header style="position: fixed; top: 0px;left: 0px;"></app-header>
 <span class='btnmenu'><a (click)="desplegarMC()"><img [src]="closedIcon"></a></span>
-<app-navbar *ngIf="showC" class="menu" (btn)='change()'></app-navbar>
+<app-navbar *ngIf="showC" class="menu" (btn)='change()' data-aos="zoom-in" ></app-navbar>
 <app-footer></app-footer>
