--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,7 +3,7 @@
         <ul >
             <li class="containerN__link" *ngFor="let data of dataMenu">
                 <div class="distrib" >
-                    <a title='{{data.titulo}}' href="{{data.url}}"><img [src]="data.icon" data-aos="zoom-in" data-aos-duration="3000">
+                    <a title='{{data.titulo}}' href="{{data.url}}"><img [src]="data.icon" >
                         <p >{{data.titulo}}</p>
                     </a>
                 </div>
