--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -16,6 +16,10 @@
         <img *ngFor="let data of database" class="imgseparator" [src]="data.icon" title='{{data.title}}'>
 
     </div>
+    <div class="space" data-aos="zoom-in" data-aos-duration="3000">
+        <img *ngFor="let data of game" class="imgseparator" [src]="data.icon" title='{{data.title}}'>
+
+    </div>
     <div class="space" data-aos="zoom-in" data-aos-duration="3000"> 
         <img *ngFor="let data of cloud" class="imgseparator" [src]="data.icon" title='{{data.title}}'>
 
