--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <p class="about-paragraph" data-aos="zoom-in" data-aos-duration="3000"  >
-    Ease of working as part of a team, always willing to improve and learn "life Long Learnig",
+    Ease of working as part of a team, always willing to improve and learn "life Long Learning",
     to broadcast my knowledge and experiences of diverse environments that give me the possibility to approach the
     challenges from different perspectives.<br>
     Project management methodologies used Scrum&Agile.<br>
