--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -12,10 +12,10 @@
         <img *ngFor="let data of databack" class="imgseparator" [src]="data.icon" title='{{data.title}}'>
 
     </div>
-    <div class="space" data-aos="zoom-in" data-aos-duration="3000">
+    <!-- <div class="space" data-aos="zoom-in" data-aos-duration="3000">
         <img *ngFor="let data of database" class="imgseparator" [src]="data.icon" title='{{data.title}}'>
 
-    </div>
+    </div> -->
     <div class="space" data-aos="zoom-in" data-aos-duration="3000">
         <img *ngFor="let data of game" class="imgseparator" [src]="data.icon" title='{{data.title}}'>
 
