--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,7 +7,7 @@
       <img [src]="linkedin"> <p> Linkedin</p>
     </a>
     <div class='centrar'>
-      <img [src]="email" ><p>colomerMR@gmail.com</p>
+      <img [src]="email" ><p>colomerMR@hotmail.com</p>
     </div>
   </div>  
 </footer>
