--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,7 +42,7 @@ li {
 
 .container {
   margin: 0 auto;
-  padding: 40px 80px;
+  //padding: 40px 80px;
   width: 80%;
 }
 
@@ -86,4 +86,7 @@ body {
   .title{
     font-size: 40px;
   }
+  /*.container {
+    padding: 40px 10px;
+  }*/
 }
